--- a/LLM-linformer/hyper-parameter.yaml
+++ b/LLM-linformer/hyper-parameter.yaml
@@ -1,19 +1,20 @@
 # 훈련 과정에 필요하는 hyperparameter
 batch_size: 16
-learning_rate: 0.005   # 0.0005
-max_len: 600
+learning_rate: 0.0001   # 0.0005
+max_len: 800
 num_fold: 6
 shuffle: True
-num_epochs: 50
+num_epochs: 20
 scheduler_gamma: 0.8
 scheduler_step_size: 10
-patience: 10
+patience: 5
+weight_decay: 0.03
 
 # 모델 관련 hyperparameter
-n_head: 4
-head_dim: 64
-n_stack: 10
-k: 64 
-embedding_dropout: 0.1
-attention_dropout: 0.1
-ffn_dropout: 0.1
+n_head: 1 
+head_dim: 32 
+n_stack: 1 
+k: 32 
+embedding_dropout: 0.2
+attention_dropout: 0.5
+ffn_dropout: 0.5
